fix(Interactive Task): prevent illustration from pushing options out of container

--- a/src/components/interactive-task/_interactive-task.scss
+++ b/src/components/interactive-task/_interactive-task.scss
@@ -91,6 +91,11 @@
             height: auto;
         }
 
+        @include mq($from: wide) {
+            margin: 0 auto;
+            max-width: 80%;
+        }
+
         > svg {
             display: block;
 
